...
                QuickFixTextFieldCustom(
                    value = quickFixTile,
                    onValueChange = {
                      quickFixTile = it
                      // update the quickfix tile
                    },
                    placeHolderText = "Enter a title ...",
                    placeHolderColor = colorScheme.onSecondaryContainer,
                    label =
                        @Composable {
                          Text(
                              text = "Title",
                              style = poppinsTypography.labelSmall,
...
                    showTrailingIcon = { false },
                )
              }

              item {
                Text(
                    text = "Features services",
                    style = poppinsTypography.labelSmall,
                    color = colorScheme.onBackground,
                    fontWeight = FontWeight.Medium,
                    modifier = Modifier.padding(start = 4.dp, bottom = 8.dp, top = 10.dp))
              }

...
                    widthRatio = widthRatio,
                    heightRatio = heightRatio)
              }

              item {
                Text(
                    text = "Add-on services",
                    style = poppinsTypography.labelSmall,
                    color = colorScheme.onBackground,
                    fontWeight = FontWeight.Medium,
                    modifier = Modifier.padding(top = 16.dp, bottom = 8.dp, start = 4.dp))
              }

...
                                      fontSize = 12.sp, fontWeight = FontWeight.Medium),
                              color = colorScheme.onBackground,
                              modifier = Modifier.padding(bottom = 8.dp, start = 4.dp, top = 4.dp))
                        },
                    hasShadow = false,
                    borderColor = colorScheme.tertiaryContainer,
                    placeHolderText = "Type a description...",
                    maxChar = 1500,
                    showCharCounter = true,
                    moveCounter = 17.dp,
                    charCounterTextStyle =
                        poppinsTypography.headlineMedium.copy(
                            fontSize = 12.sp, fontWeight = FontWeight.Medium),
...
                                    imageVector = Icons.Default.Event,
                                    contentDescription = "Event",
                                    tint = colorScheme.onPrimary,
                                )
                                Spacer(modifier = Modifier.width(8.dp))
                                Text(
                                    text = "Add Suggested Date",
                                    style = poppinsTypography.labelSmall,
                                    color = colorScheme.onPrimary,
                                    fontWeight = FontWeight.Bold)
                              }
                        }
                      }
...
                            modifier =
                                Modifier.fillMaxWidth()
                                    .padding(top = 16.dp, start = 4.dp)
                                    .weight(0.8f),
                            horizontalAlignment = Alignment.Start) {
                              Text(
                                  text = "Suggested Date",
                                  style = poppinsTypography.headlineMedium,
                                  color = colorScheme.onBackground,
                                  fontWeight = FontWeight.SemiBold,
                                  fontSize = 16.sp,
                                  modifier = Modifier.padding(bottom = 16.dp))
                              Row(
...
                      locationTitle = it
                      if (locationExpanded) {
                        locationViewModel.setQuery(it)
                      }
                    },
                    singleLine = true,
                    placeHolderText = "Enter a location ...",
                    showLeadingIcon = { false },
                    showTrailingIcon = { false },
                    hasShadow = false,
                    placeHolderColor = colorScheme.onSecondaryContainer,
                    label =
                        @Composable {
...
                          } else {
                            it
                          }
                        }) {
                      if (uploadedImages.isEmpty()) {
                        QuickFixButton(
                            buttonText = "Upload Pictures",
                            buttonColor = colorScheme.background,
                            onClickAction = { cameraBottomSheet = true },
                            modifier = Modifier.fillMaxWidth().testTag("uploadPicturesButton"),
                            height = 100.dp,
                            textColor = colorScheme.onBackground,
                            textStyle =
...
                                  fontWeight = FontWeight.SemiBold,
                                  fontSize = 20.sp,
                              ),
                      )
                      Spacer(modifier = Modifier.width(8.dp))
                      QuickFixButton(
                          buttonText = "Continue",
                          buttonColor = colorScheme.primary,
                          onClickAction = {
                            val createdQuickFix =
                                QuickFix(
                                    uid = quickFixViewModel.getRandomUid(),
                                    status = Status.PENDING,
...
