...
                locale = Locale.UK,
                style = CalendarStyle.WEEK,
                cameraDate = LocalDate.now(),
                yearSelection = true,
                monthSelection = true,
                disabledDates = disableDates),
        header = Header.Default("Select Date"))
  }
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun TimePickerDialog(
...

  AlertDialog(
      onDismissRequest = { onDismissRequest() },
      confirmButton = {
        TextButton(onClick = { onTimeSelected(timePickerState.hour, timePickerState.minute) }) {
          Text(
              "OK",
              fontSize = 16.sp,
          )
        }
      },
      dismissButton = {
        TextButton(onClick = { onDismissRequest() }) {
...
