...
  var bannerImage by remember { mutableIntStateOf(R.drawable.moroccan_flag) }
  var profilePicture by remember { mutableIntStateOf(R.drawable.placeholder_worker) }
  var initialSaved by remember { mutableStateOf(false) }
  var workerCategory by remember { mutableStateOf("Exterior Painter") }
  var workerAddress by remember { mutableStateOf("Ecublens, VD") }
  var description by remember { mutableStateOf("Worker description goes here.") }
  var includedServices by remember { mutableStateOf(listOf("Service 1", "Service 2")) }
  var addonServices by remember { mutableStateOf(listOf("Add-on 1", "Add-on 2")) }
  var workerRating by remember { mutableDoubleStateOf(4.5) }
  var tags by remember { mutableStateOf(listOf("Tag1", "Tag2")) }
  var reviews by remember { mutableStateOf(listOf("Review 1", "Review 2")) }

  BoxWithConstraints {
...
